<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="welcome_to_shoe_Store">Welcome to Shoe Store</string>
    <string name="lorem_ipsum_paragraph_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat risus sem, et auctor sem lacinia vel. Quisque sit amet mattis nisi. Mauris pellentesque diam eget massa blandit, a iaculis quam tempus. Sed sed enim massa. Maecenas dapibus sollicitudin lorem ut sollicitudin. Quisque aliquam ex sit amet ex interdum commodo. Nullam fringilla ipsum eu sem pellentesque, ut rutrum est malesuada. Ut sagittis mauris nunc, sit amet ultricies nibh sagittis ac. Vivamus vehicula lacinia lorem sit amet elementum. Etiam porta molestie leo, in convallis ex vulputate non. Aenean sit amet metus augue. Nulla sit amet fermentum arcu. Proin pharetra egestas maximus. Sed maximus est at iaculis tincidunt. Suspendisse accumsan, urna gravida elementum vehicula, lorem urna placerat sapien, at rhoncus justo urna eu magna. Nunc eget ex accumsan diam efficitur congue ut sit amet nunc.</string>
    <string name="lorem_ipsum_paragraph_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum, nunc quis egestas sagittis, nibh mi tincidunt libero, sit amet imperdiet nisl eros sed magna. Sed tincidunt aliquet neque at pharetra. Donec id odio efficitur, porta metus nec, suscipit nulla. Integer a erat interdum, cursus neque pulvinar, suscipit nunc. Donec dui nunc, laoreet in arcu et, consequat feugiat urna. Ut pretium risus non lacus luctus commodo. Etiam suscipit rutrum nunc quis dignissim.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices quam magna, vitae interdum augue pharetra.</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="shoe_name">Shoe name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="shoes">Shoes</string>
    <string name="new_Shoe">New shoe</string>
    <string name="placeholder">placeholder</string>
    <string name="log_out">Log out</string>
</resources>
